We have added setup logos images to the project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El blog de Colandru</title>
   </head>
   <body>
     <h1>
@@ -13,5 +13,9 @@
       Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos,
       en el nivel 2 aprenderás de componentes y en 3 sobre layouts.
     </p>
+    <img src="images/google-chrome.png" alt="Google Chrome logo" title="Google Chrome logo">
+    <img src="images/visual-studio-code.png" alt="Visual Studio code logo" title="Visual Studio code logo">
+    <img src="images/figma.png" alt="Figma logo" title="Figma logo">
+    <img src="images/github.png" alt="GitHub logo" title="GitHub logo">
   </body>
 </html>
